Added support for aliases
Changed structure, put everything in ./src
Moved Date.prototype overrides into ./src/lib/Date.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "logger",
   "version": "0.1.0",
   "description": "Logging wrapper",
-  "main": "logger.js",
+  "main": "./src/index.js",
   "dependencies": {
     "chalk": "^1.1.3"
   },
