--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
   "dependencies": {
     "chalk": "^1.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coveralls": "^2.11.15",
+    "eslint": "^3.10.2",
+    "istanbul": "^0.4.5",
+    "jasmine-core": "^2.5.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf build coverage",
+    "coverage": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine --captureExceptions",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "lint": "eslint spec src",
+    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
+    "test": "npm run clean && npm run lint && npm run specs"
   },
   "repository": {
     "type": "git",
