--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
   "devDependencies": {
     "coveralls": "^2.11.15",
     "eslint": "^3.10.2",
-    "istanbul": "^0.4.5",
-    "jasmine-core": "^2.5.2"
-  },
-  "scripts": {
-    "clean": "rm -rf build coverage",
-    "coverage": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine --captureExceptions",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "lint": "eslint spec src",
-    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
-    "test": "npm run clean && npm run lint && npm run specs"
+    "istanbul": "^0.4.5"
   },
   "repository": {
     "type": "git",
@@ -34,6 +25,14 @@
   "bugs": {
     "url": "https://github.com/btoll/logger/issues"
   },
-  "homepage": "https://github.com/btoll/logger#readme"
+  "homepage": "https://github.com/btoll/logger#readme",
+  "scripts": {
+    "clean": "rm -rf build coverage",
+    "coverage": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine --captureExceptions",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "lint": "eslint spec src",
+    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
+    "test": "npm run clean && npm run lint && npm run specs"
+  }
 }
 
