--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.15",
+    "dump_describes": "git+https://github.com/btoll/dump_describes.git",
     "eslint": "^3.10.2",
     "istanbul": "^0.4.5"
   },
@@ -31,7 +32,8 @@
     "coverage": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine --captureExceptions",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint spec src",
-    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
+    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine && npm run suites",
+    "suites": "cd spec && dump_describes -t logger.js -v --html && dump_describes -t logger.js -v --md && cd ..",
     "test": "npm run clean && npm run lint && npm run specs"
   }
 }
