--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint spec src",
     "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine && npm run suites",
-    "suites": "dump_describes -t spec/logger.js -d spec -v --html && dump_describes -t spec/logger.js -d spec -v --md",
+    "suites": "dump_describes -t spec/logger-spec.js -d spec -v --html && dump_describes -t spec/logger-spec.js -d spec -v --md",
     "test": "npm run clean && npm run lint && npm run specs"
   }
 }
