Moved pre- and postprocess functions to `base`, updated README
Bumped patch version to 0.3.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onf-logger",
-  "version": "0.3.0",
-  "description": "Logging wrapper",
+  "version": "0.3.1",
+  "description": "Customizable logging wrapper with hooks and aliases",
   "main": "./src/index.js",
   "repository": {
     "type": "git",
